# raylib-cmake-template

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
src/: main.c  plum.c
