CMAKE_MINIMUM_REQUIRED(VERSION 3.28)
PROJECT(rr2 VERSION 0.1)

ADD_SUBDIRECTORY(submodules/raylib)

SET(CMAKE_C_STANDARD 99)

ADD_EXECUTABLE(rr "src/main.c")
TARGET_LINK_LIBRARIES(rr PUBLIC raylib)
INSTALL(TARGETS rr)

SET_PROPERTY(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT rr)